<resources>
    <string name="app_name">Cooking is Fun</string>
    <string name="search">Search...</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_new_recipe">New Recipe</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>

    <string name="action_sign">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="recipes">Recipes</string>
    <string name="new_recipe">New Recipe</string>
    <string name="favorites">Favorites</string>
    <string name="ingredients">Ingredients</string>
    <string name="elaboration">Elaboration</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_time">Elaboration Time</string>
    <string name="recipe_ingredients">Ingredients</string>
    <string name="recipe_elaboration">Elaboration</string>
    <string name="contact">Contact</string>
    <string name="email_subject">Subject</string>
    <string name="email_message">Message</string>
    <string name="title_activity_contact">Contac</string>
    <string name="email_comment">Do you have any suggestions with the service? , Any doubts or complaints? Get in touch with us indicating your email and we will answer you as soon as possible.</string>
</resources>
