<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rafaxplayer.cookingisfun.activitys.Contact_Activity">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="?actionBarSize"
        android:background="@color/black_semi_transparent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/email_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:elevation="1dp"
                android:textColor="@android:color/white"
                android:padding="15dp"
                style="@style/TextAppearance.AppCompat.Small.Inverse" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginLeft="@dimen/activity_margin"
                android:background="?attr/editTextBackground">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/email_subject"
                    android:layout_weight="1"
                    android:hint="@string/email_subject"
                    android:textColor="@android:color/white"
                     />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:id="@+id/email_message"
                    android:layout_weight="1"
                    android:hint="@string/email_message"
                    android:lines="8"
                    android:minLines="5"
                    android:scrollbars="vertical"
                    android:layout_gravity="top|left"
                    android:textColor="@android:color/white" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:theme="@style/CustomActionBar" />
    </android.support.design.widget.AppBarLayout>
    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_icon="@drawable/ic_action_content_send"
        android:layout_gravity="bottom|right"
        app:fab_addButtonSize="normal"
        app:fab_title="Send"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin" />

</android.support.design.widget.CoordinatorLayout>
