<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_new_recipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rafaxplayer.cookingisfun.activitys.New_Recipe_Activity">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:background="@color/black_semi_transparent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="?actionBarSize">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/image_recipe"
                android:layout_width="match_parent"
                android:src="@drawable/recipe_placeholder2"
                android:elevation="1dp"
                android:layout_gravity="top|left"
                android:scaleType="centerCrop"
                android:layout_height="250dp" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_size_normal"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginLeft="@dimen/activity_margin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"

                    android:id="@+id/recipe_name"
                    android:layout_weight="1"
                    android:hint="@string/recipe_name"
                    android:textColor="@android:color/white" />


            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/activity_margin">
                <com.cunoraz.tagview.TagView
                    xmlns:tagview="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/tag_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    tagview:lineMargin="5dp"
                    tagview:tagMargin="5dp"
                    tagview:textPaddingLeft="8dp"
                    tagview:textPaddingTop="5dp"
                    tagview:textPaddingRight="8dp"
                    tagview:textPaddingBottom="5dp"
                    android:layout_weight="1" />
                <Button
                    android:text="Categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttoncats"
                    android:elevation="1dp"
                    android:background="@color/colorAccent"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recipe_time"
                    android:layout_weight="1"
                    android:hint="@string/recipe_time"
                    android:clickable="false"
                    android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:text="Select Time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonTime"
                    android:elevation="0dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:id="@+id/recipe_ingredients"
                    android:layout_weight="1"
                    android:hint="@string/recipe_ingredients"
                    android:lines="8"
                    android:minLines="5"
                    android:scrollbars="vertical"
                    android:layout_gravity="top|left"
                    android:textColor="@android:color/white" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/activity_margin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:id="@+id/recipe_elaboration"
                    android:layout_weight="1"
                    android:hint="@string/recipe_elaboration"
                    android:lines="8"
                    android:minLines="5"
                    android:scrollbars="vertical"
                    android:layout_gravity="top|left"
                    android:textColor="@android:color/white" />



            </android.support.design.widget.TextInputLayout>
            <Button
                android:text="Guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/activity_margin" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:theme="@style/CustomActionBar" />
    </android.support.design.widget.AppBarLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_plus_white_18dp"
        app:fab_addButtonSize="normal"
        app:borderWidth="0dp"
        app:elevation="8dp"
        app:layout_anchor="@id/image_recipe"

        app:fab_expandDirection="left"
        android:layout_marginRight="@dimen/fab_margin"
        app:layout_anchorGravity="bottom|right|center">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera_white_18dp"
            app:fab_addButtonSize="mini"
            app:fab_title="Photo"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_image_white_18dp"
            app:fab_addButtonSize="mini"
            app:fab_title="Image gallery"/>
    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</android.support.design.widget.CoordinatorLayout>
